# GenniaServer3

./: .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
src/: game.rs  main.rs  prisma.rs  routes.rs
src/game/: block.rs  constants.rs  player_in_room.rs  room.rs
